fixes bug 181732 "nordic mtv site produces 'is not a valid protocol'" r=andreas.otte@debitel.net sr=bzbarsky